serving model via actions
currently only works with test case, not user input

--- a/dialectbot/classifier/action_test.ipynb
+++ b/dialectbot/classifier/action_test.ipynb
@@ -25,7 +25,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -54,7 +54,7 @@
     "    return d, d_classes, dialect_classifier, test_case\n",
     "\n",
     "def encode_data(input_data):\n",
-    "    ''' Encod our input data with pre-trained label encoders.\n",
+    "    ''' Encode our input data with pre-trained label encoders.\n",
     "    '''\n",
     "    # encode our test data\n",
     "    test_case_encoded = input_data\n",
@@ -86,7 +86,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 90,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -95,7 +95,7 @@
       "text/plain": "array(['new york NY', 'houston TX', 'miami FL'], dtype=object)"
      },
      "metadata": {},
-     "execution_count": 90
+     "execution_count": 2
     }
    ],
    "source": [
@@ -103,6 +103,24 @@
     "test_case_encoded = encode_data(test_case)\n",
     "predict_cities(test_case_encoded)\n",
     "# expected output = 'new york NY', 'houston TX', 'miami FL'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": "array(['new york NY', 'houston TX', 'miami FL'], dtype=object)"
+     },
+     "metadata": {},
+     "execution_count": 5
+    }
+   ],
+   "source": [
+    "predict_cities(test_case_encoded)[0:3]"
    ]
   }
  ]
