added fuzzy matching for user input to multilple choices

--- a/dialectbot/validation_sketchbook.ipynb
+++ b/dialectbot/validation_sketchbook.ipynb
@@ -25,7 +25,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -35,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -44,7 +44,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -53,7 +53,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -69,7 +69,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -234,10 +234,79 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": "Collecting fuzzywuzzy\n  Using cached fuzzywuzzy-0.18.0-py2.py3-none-any.whl (18 kB)\nInstalling collected packages: fuzzywuzzy\nSuccessfully installed fuzzywuzzy-0.18.0\n"
+    }
+   ],
+   "source": [
+    "! pip install fuzzywuzzy"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "from fuzzywuzzy import process"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": "1.49 ms ± 11.2 µs per loop (mean ± std. dev. of 7 runs, 1000 loops each)\n"
+    }
+   ],
+   "source": [
+    "%%timeit\n",
+    "\n",
+    "choices = answers_db()['beverage']\n",
+    "answer = process.extractOne(\"sodypop\", choices)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "error",
+     "ename": "SyntaxError",
+     "evalue": "'return' outside function (<ipython-input-13-fffe73e2898b>, line 6)",
+     "traceback": [
+      "\u001b[1;36m  File \u001b[1;32m\"<ipython-input-13-fffe73e2898b>\"\u001b[1;36m, line \u001b[1;32m6\u001b[0m\n\u001b[1;33m    return {name_of_slot: value}\u001b[0m\n\u001b[1;37m    ^\u001b[0m\n\u001b[1;31mSyntaxError\u001b[0m\u001b[1;31m:\u001b[0m 'return' outside function\n"
+     ]
+    }
+   ],
+   "source": [
+    "name_of_slot = \"beverage\"\n",
+    "\n",
+    "if value.lower() in self.answers_db()[name_of_slot]:\n",
+    "    # validation succeeded, set the value of the slot to \n",
+    "    # user-provided value\n",
+    "    return {name_of_slot: value}\n",
+    "else:\n",
+    "    # find the closest answer by some measure (edit distance?)\n",
+    "    choices = self.answers_db()[name_of_slot]\n",
+    "    answer = process.extractOne(value.lower(), choices)\n",
+    "\n",
+    "    # check to see if distnace is greater than some threshold\n",
+    "    if answer[1] < 45:\n",
+    "        # if so, set slot to \"other\"\n",
+    "        return {name_of_slot: \"other\"}\n",
+    "    else:\n",
+    "        return {name_of_slot: answer[0]}"
+   ]
   }
  ]
 }
