added formatting data to send to encoder
currently seeing "previously unseen labels" error, need to souble check data, spacing, etc.

--- a/dialectbot/classifier/action_test.ipynb
+++ b/dialectbot/classifier/action_test.ipynb
@@ -1,27 +1,4 @@
 {
- "nbformat": 4,
- "nbformat_minor": 2,
- "metadata": {
-  "language_info": {
-   "name": "python",
-   "codemirror_mode": {
-    "name": "ipython",
-    "version": 3
-   },
-   "version": "3.7.6-final"
-  },
-  "orig_nbformat": 2,
-  "file_extension": ".py",
-  "mimetype": "text/x-python",
-  "name": "python",
-  "npconvert_exporter": "python",
-  "pygments_lexer": "ipython3",
-  "version": 3,
-  "kernelspec": {
-   "name": "python37264bit47698e2c9ab8417399d6bee912c1be96",
-   "display_name": "Python 3.7.2 64-bit"
-  }
- },
  "cells": [
   {
    "cell_type": "code",
@@ -122,6 +99,127 @@
    "source": [
     "predict_cities(test_case_encoded)[0:3]"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "# tracker: Tracker,\n",
+    "\n",
+    "tracker.get_slot('cuisine')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "slot_question_key = {'Q050': 'second_person_plural',\n",
+    " 'Q028': 'cot_caught',\n",
+    " 'Q080': 'rain_sun',\n",
+    " 'Q066': 'crawfish',\n",
+    " 'Q110': 'halloween',\n",
+    " 'Q064': 'sandwich',\n",
+    " 'Q090': 'side_road',\n",
+    " 'Q105': 'beverage',\n",
+    " 'Q073': 'shoes',\n",
+    " 'Q079': 'highway',\n",
+    " 'Q058': 'yard_sale',\n",
+    " 'Q107': 'rubbernecking',\n",
+    " 'Q094': 'frosting',\n",
+    " 'Q014': 'lawyer',\n",
+    " 'Q076': 'kitty_corner',\n",
+    " 'Q065': 'firefly',\n",
+    " 'Q060': 'verge',\n",
+    " 'Q118': 'brew_thru',\n",
+    " 'Q103': 'water_fountain'}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": "Q050                                 other\nQ028                                  same\nQ080              the wolf is giving birth\nQ066                                  craw\nQ110                                 other\nQ064                               grinder\nQ090                         service roadm\nQ105                                   pop\nQ073                                 shoes\nQ079                               freeway\nQ058                           garage sale\nQ107                         gapers' block\nQ094                               neither\nQ014                                   law\nQ076                            kitacorner\nQ065                         peenie wallie\nQ060                                 other\nQ118    I have never heard of such a thing\nQ103                                 other\nName: 1858, dtype: object"
+     },
+     "metadata": {},
+     "execution_count": 6
+    }
+   ],
+   "source": [
+    "d, d_classes, dialect_classifier, test_case = load_data()\n",
+    "test_case"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": "second_person_plural\ncot_caught\nrain_sun\ncrawfish\nhalloween\nsandwich\nside_road\nbeverage\nshoes\nhighway\nyard_sale\nrubbernecking\nfrosting\nlawyer\nkitty_corner\nfirefly\nverge\nbrew_thru\nwater_fountain\n"
+    }
+   ],
+   "source": [
+    "formatted_responses = pd.Series(index = slot_question_key.keys())\n",
+    "\n",
+    "for index, value in formatted_responses.items():\n",
+    "    formatted_responses[index] = slot_question_key[index]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": "Q050    second_person_plural\nQ028              cot_caught\nQ080                rain_sun\nQ066                crawfish\nQ110               halloween\nQ064                sandwich\nQ090               side_road\nQ105                beverage\nQ073                   shoes\nQ079                 highway\nQ058               yard_sale\nQ107           rubbernecking\nQ094                frosting\nQ014                  lawyer\nQ076            kitty_corner\nQ065                 firefly\nQ060                   verge\nQ118               brew_thru\nQ103          water_fountain\ndtype: object"
+     },
+     "metadata": {},
+     "execution_count": 41
+    }
+   ],
+   "source": [
+    "# this won't work\n",
+    "formatted_responses = pd.Series(index = slot_question_key.keys())\n",
+    "\n",
+    "for index, value in formatted_responses.items():\n",
+    "    formatted_responses[index] = tracker.get_slot(slot_question_key[index])"
+   ]
   }
- ]
+ ],
+ "metadata": {
+  "language_info": {
+   "name": "python",
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "version": "3.7.6-final"
+  },
+  "orig_nbformat": 2,
+  "file_extension": ".py",
+  "mimetype": "text/x-python",
+  "name": "python",
+  "npconvert_exporter": "python",
+  "pygments_lexer": "ipython3",
+  "version": 3,
+  "kernelspec": {
+   "name": "python37264bit47698e2c9ab8417399d6bee912c1be96",
+   "display_name": "Python 3.7.2 64-bit"
+  }
+ },
+ "nbformat": 4,
+ "nbformat_minor": 2
 }
